# 2024_kn240_oop

./: .gitignore  README.md
1_lab/: 1.ipynb  README.md
1_lab/pipenv_env/: Pipfile  __main__.py  abstraction.py  animals.py  incapsulation.py  polimorfism.py
1_semestr/2_lab/: 2.ipynb  README.md
1_semestr/init/: README.md
2_lab/: 1.csv  2.ipynb  __main__.py  cpu.py  my_module.py  test.txt  tqdm_test.ipynb  tqdm_test.py  write_file.py
3_lab/: 3.ipynb  README.md  dp.yaml  my_class.py  sword.ipynb
3_lab/web_app/: Dockerfile  docker-compose.yml  pyproject.toml
3_lab/web_app/src/web_app/: app.py
