[project]
name = "web-app"
version = "0.1.0"
description = ""
authors = [
    {name = "bbuhyl",email = "bbuhyl@cisco.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "redis (>=6.0.0,<7.0.0)"
]

[tool.poetry]
packages = [{include = "web_app", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
